[package]
name = "rust_web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
tokio = { version = "1.28.2", features = ["full"] }
scraper = "0.16.0"